Column scrolling on mobile fix

--- a/src/index.css
+++ b/src/index.css
@@ -72,4 +72,10 @@
   height: 100vh;
 }
 
-
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
